--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/app.ts",
-    "dev": "nodemon src/app.ts",
+    "build": "tsc && tsc-alias",
+    "prestart": "npm run build",
+    "start": "node build/app.js",
+    "dev": "tsc && (concurrently 'tsc -w' 'tsc-alias -w' 'nodemon build/app.js')",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "eslint . --ext .js,.ts --fix",
     "format": "prettier --write .",
     "prepare": "husky install"
   },
   "keywords": [],
-  "author": "",
+  "author": "Thaneshwor Joshi",
+  "repository": "git@github.com:thaneshworjoshi/starter",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
@@ -27,7 +29,9 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pino": "^8.17.2",
+    "pino-http": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
@@ -39,6 +43,7 @@
     "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "concurrently": "^8.2.2",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^42.0.0",
@@ -49,6 +54,7 @@
     "husky": "^8.0.0",
     "prettier": "^3.1.1",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.8",
     "typescript": "*"
   }
 }
