feat: implement email verification using email and OTP code

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ JWT_REFRESH_SECRET = your-jwt-refresh-secret
 
 DB_NAME=your-db-name
 NODE_ENV=development
+
+EMAIL=your-email-address
+EMAIL_PASS=your-email-app-password
