feat: add feature to send reset-password link to email

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DATABASE="your-mongodb-url"
 PORT=8080
+APP_URL='https://example.com'
 
 JWT_SECRET=your-jwt-secret
 JWT_REFRESH_SECRET = your-jwt-refresh-secret
